Remove Animation CSS

--- a/kekecomponent/src/styles/index.scss
+++ b/kekecomponent/src/styles/index.scss
@@ -4,6 +4,8 @@
 
 @import "./mixin";
 
+@import "./animation";
+
 @import "../component/Button/_style.scss";
 
 @import "../component/Alert/_style.scss";
