--- a/kekecomponent/src/component/Menu/_style.scss
+++ b/kekecomponent/src/component/Menu/_style.scss
@@ -54,7 +54,7 @@
     list-style:none;
     padding-left: 0;
     white-space: nowrap;
-    opacity: 0;
+    //opacity: 0;
     transition: opacity .5s ease-in;
     //transition: $menu-transition;
     .menu-item {
@@ -69,7 +69,7 @@
   }
   .submenu.menu-opened {
     //display: block;
-    opacity: 1;
+    //opacity: 1;
   }
 }
 .menu-horizontal {
