--- a/kekecomponent/src/styles/_animation.scss
+++ b/kekecomponent/src/styles/_animation.scss
@@ -1,20 +1,20 @@
-.zoom-in-top-entered {
+.zoom-in-top-enter {
   opacity: 0;
   transform: scaleY(0);
 }
 
-.zoom-in-top-entered-active {
+.zoom-in-top-enter-active {
   opacity: 1;
   transform: scaleY(1);
   transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
   transform-origin: center top;
 }
 
-.zoom-in-top-exited {
+.zoom-in-top-exit {
   opacity: 1;
 }
 
-.zoom-in-top-exited-active {
+.zoom-in-top-exit-active {
   opacity: 0;
   transform: scaleY(0);
   transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
